--- a/styles/03-components/_card.scss
+++ b/styles/03-components/_card.scss
@@ -283,7 +283,7 @@
     color: $color-spunpearl;
   }
 
-  &__description {
+  &__description span {
     color: $color-midgray;
   }
 
@@ -889,8 +889,10 @@
     .card__body {
       padding: 0 21px 0 20px;
     }
+
     .card__description {
       padding: 0;
+
       span {
         padding: 0 16px 0 0;
       }
@@ -898,8 +900,14 @@
 
     .card__bottom {
       padding: 22px 0 20px 20px;
+
       &__apply {
         span > img {
+          padding-left: 10px;
+        }
+
+        a {
+          color: $color-coral;
           padding-left: 10px;
         }
       }
